--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "deploy": "gh-pages -d dist",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "generate-pdfs": "node generate-pdfs.js"
+    "generate-pdfs": "node generate-pdfs.js",
+    "postinstall": "node copy-worker.cjs"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -49,6 +52,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "gh-pages": "^6.3.0",
-    "vite": "^5.1.4"
+    "vite": "^5.1.4",
+    "vite-plugin-static-copy": "^3.0.0"
   }
 }
